--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,7 +1,8 @@
-<div *ngIf="messageService.messages.length">
-  <h2>Messages</h2>
+<h2>Messages</h2>
+<div *ngIf="messageService.messages.length; else emptystate">
   <button type="button" class="clear" (click)="messageService.clear()">
     Clear messages
   </button>
   <div *ngFor="let message of messageService.messages">{{ message }}</div>
 </div>
+<ng-template #emptystate>leeg</ng-template>
