--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,10 +2,12 @@
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{ hero.id }}">
-      <span class="badge">{{ hero.id }}</span> {{ hero.name }}
+      <span class="badge">{{ hero.id }}</span>
+      {{ hero.name }} | superpower: {{ hero.power }}
     </a>
   </li>
 </ul>
+
 <!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
 <div>
   <label for="new-hero">Hero name: </label>
